--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="bootstrap.css">
 
 <style>
 .jumbotron{
@@ -15,28 +15,104 @@
 .jumbotron h1{
   font-family: 'Staatliches', cursive;
   font-size: 4em;
+
 }
 </style>
 
 </head>
 <body>
 
-  <h1>Book a Teacher</h1>
+   <div class="jumbotron text-center text-white">
+  <h1 >Book a Teacher</h1>
   <p>User Experience Web Interface Design</p> 
-  
-  <nav>
-  <!-- NAVIGATION GOES HERE -->
+  </div>
+</div>
+  <div class="container">
+       <nav class="navbar navbar-expand-lg navbar-expand-sm navbar-light bg-light nav-tabs" style="margin-top: 0px;">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Teachers</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="booking.html">Booking</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      
+    </ul>
+  </div>
+</nav>
+<div class="container-fluid">
 
-  </nav>
 
-  <main>  
-  <!-- CONTENT GOES HERE -->
+  <main style="margin-top: 20px;">
+    
 
+<div class="row d-md-none">
+  <div class="col">
+  <h5 class="text-primary" style="margin-top: 20px;"> UXWID Teachers<h5>
+<p class="text-muted text-justify">Jennifer, Reza and Alicia are the three teachers of the course User Experience and Web Interface design. They decided to join forces and share their insight with all students. They are available at different times in the day and evening to offer students more options to meet a teacher.</p>
+</div>
+
+<div class="col">
+<div class="float-sm-right d-md-none">
+<img src="rja.png" style="width: 100%;height: 100%; margin-top: 25%;" >
+</div>
+</div>
+</div>
+
+<div class="d-sm-none d-md-block">
+<h5 class="text-primary" style="margin-top: 20px;"> UXWID Teachers<h5>
+<p class="text-muted text-justify">Jennifer, Reza and Alicia are the three teachers of the course User Experience and Web Interface design. They decided to join forces and share their insight with all students. They are available at different times in the day and evening to offer students more options to meet a teacher.</p>
+</div>
+
+
+
+
+<div class="row" style="margin-top: 30px;">
+    <div class="col">
+      <h4 class="text-center">Jennifer</h4>
+      <img style="border-radius: 50% 50% 50% 50%; width: 100%; height: auto;" class="d-sm-none d-md-block" src="jennifer.png">
+      <p class="text-muted" style="margin-top: 20px;">With more than twenty years experience in the field, Jennifer is your best source to understand web design foundations and principles using HTML5 and CSS3.<br><br>
+Jennifer's interests include books and biking.</p>
+<div class="container-fluid text-center">
+<a class="btn btn-primary" href="mailto:Jennifer@gmail.com" role="button">Email Jennifer</a>
+</div>
+    </div>
+    <div class="col">
+      <h4 class="text-center">Reza</h4>
+      <img style="border-radius: 50% 50% 50% 50%; width: 100%; height: auto;" class="d-sm-none d-md-block" src="reza.png">
+      <p class="text-muted" style="margin-top: 20px;">Responsiveness is one of the most important criteria of a website. Reza can teach you the steps to build great responsive websites with ease and clarity.<br><br>
+Reza's interests include camping and robotics.
+</p>
+
+<div class="container-fluid text-center">
+<a class="btn btn-primary" href="mailto:Reza@gmail.com" role="button">Email Reza</a>
+</div>
+
+    </div>
+    <div class="col">
+      <h4 class="text-center">Alicia</h4>
+      <img style="border-radius: 50% 50% 50% 50%; width: 100%; height: auto;" class="d-sm-none d-md-block" src="ali.png">
+      <p class="text-muted" style="margin-top: 20px;">Meet Alicia to discuss prototyping websites following the latest design principles and best practices for meaning and great user emotional experience. <br><br>
+Alicia's interests include puzzles and climbing.</p>
+      <div class="container-fluid text-center">
+<a class="btn btn-primary" href="mailto:alicia@gmail.com" role="button">Email Alicia</a>
+</div>
+    </div>
+  </div>
+</div>
+</div> 
   </main>
+  <div class="container-fluid bg-dark text-white text-center">
+    <div class="container">
+  <footer style="height: 80px;">
+    <div style="margin-top: 60px;padding-top: 35px;">Made with Love in Saint-Lambert</div>
+  </footer> 
   
-  <footer>
-    <div>Made with Love in Saint-Lambert</div>
-  </footer>  
+</div>
 
 </body>
 </html>
